--- a/index.html
+++ b/index.html
@@ -503,21 +503,23 @@
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 first">
                                     <ul class="check">
-                                        <li></li>
+                                        <li>Brachial plexus</li>
+                                        <li>Superficial cervical plexus</li>
                                     </ul><!-- end check -->
                                 </div><!-- end col-lg-4 -->
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                     <ul class="check">
-                                        <li></li>
+                                        <li>Bupivacaine</li>
+                                        <li>Ultrasound</li>
                                     </ul><!-- end check -->    
                                 </div><!-- end col-lg-4 -->
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 last">
                                     <ul class="check">
-                                        <li></li>
+                                        <li>Interscalene</li>
                                     </ul><!-- end check -->
                                 </div><!-- end col-lg-4 --> 
-                            </div><!-- end row -->   
-
+                            </div><!-- end row -->
+				
                             <hr class="invis">
 
                             <div class="btn-wrapper">
