--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>IJBMS - Home</title>
     <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="IJBMS is a peer reviewed International Basic medical sciences journal published by society of Basci Medical Sciences Doctors, tweleve times yearly, most widely viewed throughout the world,Published online in multiple international language. Online version is made freely available for institutions. IJBMS accepts manuscripts from author through out the world. And it is peer reviewed  and it is published immediately. On average three months time for publication and for rejection within 15 days after submission.">
+    <meta name="author" content="Rajasekar Ramakrishnan">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="touch-icon" href="images/touch-icon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet"> 
