--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>IJBMS - Home</title>
     <meta name="keywords" content="">
-    <meta name="description" content="IJBMS is a peer reviewed International Basic medical sciences journal published by society of Basci Medical Sciences Doctors, tweleve times yearly, most widely viewed throughout the world,Published online in multiple international language. Online version is made freely available for institutions. IJBMS accepts manuscripts from author through out the world. And it is peer reviewed  and it is published immediately. On average three months time for publication and for rejection within 15 days after submission.">
-    <meta name="author" content="Rajasekar Ramakrishnan">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="touch-icon" href="images/touch-icon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet"> 
@@ -194,9 +194,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-surgery-1.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-surgery-1.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -240,9 +242,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-anaesthesiology-1.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-anaesthesiology-1.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -288,9 +292,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-anotomy-1.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-anotomy-1.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -334,9 +340,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-anotomy-2.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-anotomy-2.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -380,9 +388,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-anotomy-3.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-anotomy-3.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -427,9 +437,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-microbiology-1.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-microbiology-1.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -474,9 +486,12 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-pharmacology-1.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-pharmacology-1.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
+
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -522,9 +537,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-anaesthesiology-2.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-anaesthesiology-2.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
@@ -568,9 +585,11 @@
 
                             <hr class="invis">
 
-                            <div class="btn-wrapper">
-                                <a href="journals/fullblog/blog-biochemistry-1.html" class="btn btn-primary">Read Full Article</a>
-                            </div>
+                            <center>
+                                <div class="btn-wrapper">
+                                    <a href="journals/fullblog/blog-biochemistry-1.html" class="btn btn-primary">Read Full Article</a>
+                                </div>
+                            </center>
 
                         </div><!-- end module -->
                     </div><!-- end col -->
